[gd_scene load_steps=8 format=3 uid="uid://cx4s3gtnjfs8k"]

[ext_resource type="Script" uid="uid://dvpdalnr6dgyb" path="res://editor_buttons.gd" id="1_0q2pl"]
[ext_resource type="Script" uid="uid://og7hwu5w3mya" path="res://Menus/editors/card_editor.gd" id="1_ob1ac"]
[ext_resource type="Script" uid="uid://diofbv4ffgumd" path="res://Menus/editors/editor_boxes.gd" id="3_d4l1r"]
[ext_resource type="PackedScene" uid="uid://b5guytyy41qsc" path="res://Menus/transitioner/transitioner.tscn" id="3_qq8ni"]
[ext_resource type="Script" uid="uid://543sfjonnjf3" path="res://Menus/editors/cards.gd" id="4_3fmfi"]
[ext_resource type="Script" uid="uid://ceduorkx8adwk" path="res://Menus/editors/attempt_to_load.gd" id="4_isq4v"]
[ext_resource type="Script" uid="uid://dv2fqjeq26fr5" path="res://Menus/editors/file_functions.gd" id="5_2lymj"]

[node name="CardEditor" type="Node2D"]
script = ExtResource("1_ob1ac")

[node name="EditorButtons" type="Control" parent="." node_paths=PackedStringArray("editor", "transitioner")]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -960.0
offset_top = -576.0
offset_right = -472.0
offset_bottom = -480.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0q2pl")
editor = NodePath("..")
transitioner = NodePath("../Scene_Functions/Transitioner")

[node name="Create_New_Card" type="Button" parent="EditorButtons"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -31.0
offset_right = 139.0
grow_vertical = 0
text = "Create New Card"

[node name="Activate_Selected_Card" type="Button" parent="EditorButtons"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -60.0
offset_top = -31.0
offset_right = 60.0
grow_horizontal = 2
grow_vertical = 0
text = "Remake Scene"

[node name="Main_Menu" type="Button" parent="EditorButtons"]
layout_mode = 1
offset_right = 96.0
offset_bottom = 31.0
text = "Main Menu"

[node name="Quit" type="Button" parent="EditorButtons"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -21.0
offset_right = 21.0
offset_bottom = 31.0
grow_horizontal = 2
text = "Quit
"

[node name="Delete" type="Button" parent="EditorButtons"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -99.0
offset_top = -31.0
grow_horizontal = 0
grow_vertical = 0
text = "Delete Card"

[node name="EditorBoxes" type="Control" parent="." node_paths=PackedStringArray("editor")]
layout_mode = 3
anchors_preset = 0
offset_left = -960.0
offset_top = -440.0
offset_right = -192.0
offset_bottom = 24.0
script = ExtResource("3_d4l1r")
editor = NodePath("..")

[node name="Name" type="Control" parent="EditorBoxes"]
layout_mode = 1
anchors_preset = 0
offset_right = 312.0
offset_bottom = 144.0

[node name="CardName" type="TextEdit" parent="EditorBoxes/Name"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.91700006
anchor_right = 0.91700006
offset_left = -286.104
offset_top = 24.0
offset_right = -14.104004
offset_bottom = 144.0
grow_vertical = 2
size_flags_horizontal = 4
placeholder_text = "Enter Card name"

[node name="NameLabel" type="Label" parent="EditorBoxes/Name"]
layout_mode = 0
offset_right = 87.0
offset_bottom = 23.0
text = "Card Name"

[node name="Description" type="Control" parent="EditorBoxes"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -72.0
offset_right = 312.0
offset_bottom = 72.0
grow_vertical = 2

[node name="Description" type="TextEdit" parent="EditorBoxes/Description"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.91700006
anchor_right = 0.91700006
offset_left = -286.104
offset_top = 24.0
offset_right = -14.104004
offset_bottom = 144.0
grow_vertical = 2
size_flags_horizontal = 4
placeholder_text = "Enter Card Description"

[node name="Description Label" type="Label" parent="EditorBoxes/Description"]
layout_mode = 0
offset_right = 87.0
offset_bottom = 23.0
text = "Card Description"

[node name="TripletCluster" type="Control" parent="EditorBoxes"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -136.0
offset_right = 584.0
offset_bottom = -56.0
grow_vertical = 0

[node name="Type" type="Control" parent="EditorBoxes/TripletCluster"]
layout_mode = 1
anchors_preset = 0
offset_right = 160.0
offset_bottom = 80.0

[node name="Type" type="TextEdit" parent="EditorBoxes/TripletCluster/Type"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -56.0
offset_right = 160.0
grow_vertical = 0
size_flags_horizontal = 4
placeholder_text = "Enter Card Type"

[node name="Type Label" type="Label" parent="EditorBoxes/TripletCluster/Type"]
layout_mode = 0
offset_right = 87.0
offset_bottom = 23.0
text = "Type"

[node name="Targets" type="Control" parent="EditorBoxes/TripletCluster"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -80.0
offset_right = 80.0
offset_bottom = 80.0
grow_horizontal = 2

[node name="Targets" type="TextEdit" parent="EditorBoxes/TripletCluster/Targets"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -56.0
offset_right = 160.0
grow_vertical = 0
size_flags_horizontal = 4
placeholder_text = "Enter Card Targets"

[node name="Targets Label" type="Label" parent="EditorBoxes/TripletCluster/Targets"]
layout_mode = 0
offset_right = 87.0
offset_bottom = 23.0
text = "Targets"

[node name="Cost" type="Control" parent="EditorBoxes/TripletCluster"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -160.0
offset_bottom = 80.0
grow_horizontal = 0

[node name="Cost" type="TextEdit" parent="EditorBoxes/TripletCluster/Cost"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -56.0
offset_right = 160.0
grow_vertical = 0
size_flags_horizontal = 4
placeholder_text = "Enter Card Cost"

[node name="Cost Label" type="Label" parent="EditorBoxes/TripletCluster/Cost"]
layout_mode = 0
offset_right = 87.0
offset_bottom = 23.0
text = "Cost"

[node name="Image" type="Control" parent="EditorBoxes"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
grow_vertical = 0

[node name="Image Label" type="Label" parent="EditorBoxes/Image"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "Image Path"

[node name="Image Path" type="TextEdit" parent="EditorBoxes/Image"]
layout_mode = 0
offset_top = 24.0
offset_right = 584.0
offset_bottom = 72.0
placeholder_text = "Enter the path to the desired texture, ex: res://Assets/DummyImage.png"

[node name="Attempt To Load" type="Button" parent="EditorBoxes/Image" node_paths=PackedStringArray("attached_text_edit")]
layout_mode = 0
offset_top = 80.0
offset_right = 136.0
offset_bottom = 120.0
text = "Load Image"
script = ExtResource("4_isq4v")
attached_text_edit = NodePath("../Image Path")

[node name="Effects" type="Control" parent="EditorBoxes"]
anchors_preset = 0
offset_left = 320.0
offset_right = 360.0
offset_bottom = 40.0

[node name="Card Effects" type="Label" parent="EditorBoxes/Effects"]
layout_mode = 0
offset_right = 88.0
offset_bottom = 23.0
text = "Card Effects"

[node name="Effects" type="TextEdit" parent="EditorBoxes/Effects"]
layout_mode = 0
offset_top = 24.0
offset_right = 256.0
offset_bottom = 304.0
placeholder_text = "Card Effects"
wrap_mode = 1

[node name="FileFunctions" type="Control" parent="." node_paths=PackedStringArray("path_edit", "editor")]
layout_mode = 3
anchors_preset = 0
offset_left = 400.0
offset_top = 408.0
offset_right = 968.0
offset_bottom = 632.0
script = ExtResource("5_2lymj")
path_edit = NodePath("TextEdit")
editor = NodePath("..")

[node name="Save" type="Button" parent="FileFunctions"]
layout_mode = 1
offset_left = 368.0
offset_top = 56.0
offset_right = 461.0
offset_bottom = 87.0
text = "Save Cards"

[node name="Load" type="Button" parent="FileFunctions"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 188.0
offset_top = 56.0
offset_right = 282.0
offset_bottom = 87.0
grow_horizontal = 2
text = "Load Cards"

[node name="TextEdit" type="TextEdit" parent="FileFunctions"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -592.0
offset_top = -20.0
offset_bottom = 20.0
grow_horizontal = 0
grow_vertical = 2
placeholder_text = "Save Path, ex: res://Game/CardHandling/cards/carddata/file.json"

[node name="CardHandle" type="Node2D" parent="."]
unique_name_in_owner = true
position = Vector2(0, -384)
scale = Vector2(4, 4)

[node name="Cards" type="ItemList" parent="."]
offset_left = 704.0
offset_top = -576.0
offset_right = 896.0
offset_bottom = 384.0
script = ExtResource("4_3fmfi")

[node name="Scene_Functions" type="Node" parent="."]

[node name="Transitioner" parent="Scene_Functions" instance=ExtResource("3_qq8ni")]
offset_left = 432.0
offset_top = 56.0
offset_right = 432.0
offset_bottom = 56.0

[node name="Camera2D" type="Camera2D" parent="Scene_Functions"]

[connection signal="switched_card" from="." to="EditorBoxes" method="_on_card_editor_switched_card"]
[connection signal="updated_card" from="." to="Cards" method="_on_card_editor_updated_card"]
[connection signal="pressed" from="EditorButtons/Create_New_Card" to="EditorButtons" method="_on_create_new_card_pressed"]
[connection signal="pressed" from="EditorButtons/Activate_Selected_Card" to="EditorButtons" method="_on_activate_selected_card_pressed"]
[connection signal="pressed" from="EditorButtons/Main_Menu" to="EditorButtons" method="_on_main_menu_pressed"]
[connection signal="pressed" from="EditorButtons/Quit" to="EditorButtons" method="_on_quit_pressed"]
[connection signal="pressed" from="EditorButtons/Delete" to="EditorButtons" method="_on_delete_pressed"]
[connection signal="text_changed" from="EditorBoxes/Name/CardName" to="EditorBoxes" method="_on_card_name_text_changed" flags=18]
[connection signal="text_changed" from="EditorBoxes/Description/Description" to="EditorBoxes" method="_on_description_text_changed" flags=18]
[connection signal="text_changed" from="EditorBoxes/TripletCluster/Type/Type" to="EditorBoxes" method="_on_type_text_changed" flags=18]
[connection signal="text_changed" from="EditorBoxes/TripletCluster/Targets/Targets" to="EditorBoxes" method="_on_targets_text_changed" flags=18]
[connection signal="text_changed" from="EditorBoxes/TripletCluster/Cost/Cost" to="EditorBoxes" method="_on_cost_text_changed" flags=18]
[connection signal="pressed" from="EditorBoxes/Image/Attempt To Load" to="EditorBoxes" method="_on_attempt_to_load_pressed" flags=18]
[connection signal="text_changed" from="EditorBoxes/Effects/Effects" to="EditorBoxes" method="_on_effects_text_changed" flags=18]
[connection signal="pressed" from="FileFunctions/Save" to="FileFunctions" method="_on_save_pressed"]
[connection signal="pressed" from="FileFunctions/Load" to="FileFunctions" method="_on_load_pressed"]
[connection signal="item_selected" from="Cards" to="." method="switch_card"]
